--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+# screen coordinates to capture the YT Live Chat
 capturearea.x=1404
 capturearea.y=205
 capturearea.width=402
 capturearea.height=582
+# the Hue Bridge IP address
 net.tarilabs.aytb.HueClient/mp-rest/url=http://192.168.1.2
 net.tarilabs.aytb.HueClient/mp-rest/scope=javax.inject.Singleton
+# the Hue Group of lights to be piloted (Entertainment area are ALSO available as a group)
 hue.group=9
